--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "nuxt": "^3.10.3",
     "nuxt-quasar-ui": "^2.0.7",
     "vue": "^3.4.21",
